Fix all SonarCloud BLOCKER/MAJOR issues across 5 modules
- BLOCKER: OrderKarateRunner — add Results assertion (was no-op test)
- MAJOR: OrderIntegrationTest — rename 'record' (restricted identifier in Java 16+)
- MAJOR: SecurityConfig — suppress S112 on Spring Security's forced throws Exception
- MAJOR: 7 Kafka consumers — RuntimeException -> IllegalStateException (position, risk, notification, audit)
- MAJOR: PositionService — Stream.collect(Collectors.toList()) -> toList()
- MAJOR: RiskService/RiskMetrics — replace synchronized(m) on local var with synchronized instance methods on RiskMetrics